[package]
name = "iol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
log = "0.4"
simple_logger = "1.11"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-sesv2 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
lambda_runtime = "0.6.1"
serde = "1.0.136"
serde_json = "1.0.85"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
structopt = { version = "0.3", default-features = false }